@@ -1,3 +1,9 @@
+2017-08-29  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* server/Makefile.am: Rename final target to riscv32-gdbserver.
+	* server/Makefile.in: Regenerated.
+	* server/main.cpp: Use riscv32-gdbserver in usage message.
+
 2018-01-26  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* Makefile.in: Regenerate.
